# morpho-analytics

./: CHANGELOG.md  Dockerfile  EULA.md  FAQ.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: release-docker.yml
bundles/bio-001/: README.md  make_bundle.py  synth.npy
examples/: README.md  bio_synthetic_tracking.ipynb  bio_synthetic_tracking.py  geo_raster_tracking.ipynb  geo_raster_tracking.py  geo_report.json  make_synth.py  report.json
src/morpho_analytics/: __init__.py  cli.py  track.py
src/morpho_analytics_napari/: __init__.py  _widget.py  napari.yaml
tests/: test_track.py
